--- a/about_me.htm
+++ b/about_me.htm
@@ -24,7 +24,7 @@ p.double {border-style: double}
 </style>
 </head>
 
-<a href="index.html.htm">
+<a href="index.html">
 <img src="metalafterdark_final.jpg" alt="Metal After Dark logo"
 style=width:1000px;>
 </a>
