--- a/contact.htm
+++ b/contact.htm
@@ -23,7 +23,7 @@ margin-right: auto;
 
 <body>
 
-<a href="index.html.htm">
+<a href="index.html">
 <img src="metalafterdark_final.jpg" alt="Metal After Dark logo"
 style=width:100%;>
 </a>
