--- a/news.htm
+++ b/news.htm
@@ -44,7 +44,7 @@ margin-bottom: 10px;
 
 <body>
 
-<a href="index.html.htm">
+<a href="index.html">
 <img src="metalafterdark_final.jpg" alt="Metal After Dark logo"
 style=width:100%;>
 </a>
