--- a/reviews.htm
+++ b/reviews.htm
@@ -22,7 +22,7 @@ color:white;
 </head>
 
 <body>
-<a href="index.html.htm">
+<a href="index.html">
 <img src="metalafterdark_final.jpg" alt="Metal After Dark logo"
 style=width:100%;>
 </a>
