--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ style=width:1000px;>
 
 <h1 style="text-align:center; color:white;">An Introduction to Metal After Dark</h1>
 
-<p style="text-align:center; color:white; width:100%;">Welcome to Metal After Dark. This is my public journal and record of heavy metal albums, focusing on the underground.<br> At this stage, I am choosing only to cover full-length albums and I won’t be covering singles, EPs, compilations, live records, etc.<br> This website provides my best attempt at an unbiased opinion on metal releases while also shining a light on the hidden gems of the metal world. Scores are given based on musical techniques and innovation, re-listen value and of course my enjoyment.<br> I encourage anyone to send their reviews via the contact tab or recommendations for an album for me to cover next.</p> 
+<p style="text-align:center; color:white; width:100%;">Welcome to Metal After Dark. This is my public journal and record of heavy metal albums, focusing on the underground.<br> At this stage, I am choosing only to cover full-length albums and I won’t be covering singles, EPs, compilations, live records, etc.<br> This website provides my best attempt at an unbiased opinion on metal releases while also shining a light on the hidden gems of the metal world. Scores are given based on musical techniques and innovation, re-listen value and of course my enjoyment.<br> I encourage anyone to send their reviews via the contact tab or recommendations for an album for me to cover next.<br> For your convenience, click the banner at the top of the page to return to the homepage any time :)</p> 
 
 <div class="container">
 <img src="powerbox_blur.jpg" alt="News"
