--- a/reviews.htm
+++ b/reviews.htm
@@ -12,7 +12,7 @@ body {
 	background-attachment: fixed;
 	background-size: cover;
 }
-h2 {font-family: baskerville,
+h2 {font-family: Georgia,
 serif;
 text-align:center;
 color:white;
