--- a/reviews.htm
+++ b/reviews.htm
@@ -42,6 +42,7 @@ style=width:100%;>
 <h2><a href="r_DRAIN.htm">DRAIN - Living Proof, 24/06/2023</a></h2>
 <h2><a href="r_Beyond Agony.htm">Beyond Agony - Embrace the Inferno, 26/06/2023</a></h2>
 <h2><a href="r_Servant.htm">Servant - Blessed by the Light of a Thousand Stars, 26/06/2023</a></h2>
+<h2><ahref="r_Nithing.htm">Nithing - Agonal Hymns, 17/07/2023</a></h2>
 
 </body>
 </html>
