--- a/r_Nithing.htm
+++ b/r_Nithing.htm
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8" />
+<title>Reviews</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <body>
 
 <style>
