--- a/reviews.htm
+++ b/reviews.htm
@@ -15,14 +15,13 @@ body {
 h2 {font-family: Georgia,
 serif;
 text-align:center;
-color:white;
 }
 
 </style>
 </head>
 
 <body>
-<a href="index.html">
+<a href="index.html.htm">
 <img src="metalafterdark_final.jpg" alt="Metal After Dark logo"
 style=width:100%;>
 </a>
