--- a/r_Nithing.htm
+++ b/r_Nithing.htm
@@ -36,8 +36,10 @@ background-color: white;
 </style>
 </head>
 
+<a href="reviews.htm">
 <img src="r_metalafterdark.png" alt="Reviews"
 style=width:100%;>
+</a>
 
 <h1>The Art of Brutality - 85%</h1>
 <h3>Written for <a href="https://nithing.bandcamp.com/album/agonal-hymns">Nithing - Agonal Hymns</a></h3>
