--- a/reviews.htm
+++ b/reviews.htm
@@ -21,7 +21,7 @@ text-align:center;
 </head>
 
 <body>
-<a href="index.html.htm">
+<a href="index.html">
 <img src="metalafterdark_final.jpg" alt="Metal After Dark logo"
 style=width:100%;>
 </a>
