Reworking the styling of the site to put most of it into css.
The CSS now limits the width of the main elements of the site on wide
screen, and is responsive to small devices.

Everything is now in CSS, except for the background images on some
buttons. Those are still inline styles due to their one-off nature.

Images have been moved to their own folder so they don't clutter up the
main HTML files.

--- a/about_me.htm
+++ b/about_me.htm
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
-<title>About Me</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>
-img {
-border: 10px solid #000;
-display: block;
-margin-left: auto;
-margin-right: auto;
-}
 
-body {
-	background-image: url("reaper_boarder.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-}
-p.outset {border-style: outset;}
-p.inset {border-style: inset;}
-p.double {border-style: double}
-</style>
+<head>
+	<meta charset="utf-8" />
+	<title>About Me</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="main.css">
 </head>
 
-<a href="index.html">
-<img src="metalafterdark_final.jpg" alt="Metal After Dark logo"
-style=width:1000px;>
-</a>
+<body>
+	<a href="index.html">
+		<img src="images/metalafterdark_final.jpg" alt="Metal After Dark logo" class="logo">
+	</a>
+	<div class="container-width">
+		<h1 class="text-white text-center">About Me</h1>
 
-<h1 style="text-align:center; color:white;">About Me</h1>
+		<p class="text-base double"> My name is Tobias and I’ve been writing album reviews
+			(albeit
+			inconsistently) since October 2021. Thus far, I have uploaded my reviews to Encyclopedia Metallum or as it is
+			better
+			known, The Metal Archives. This site has been a critical part of my listening journey, boasting hundreds of
+			thousands
+			of user-submitted bands many of which I never would have otherwise discovered. Reading the reviews of other users
+			eventually prompted me to begin writing my own album reviews. I’ve taken to heart the culture of their bi-annual
+			review-writing challenge, which focuses on albums that have no reviews yet, dubbed “virgin albums”, and more often
+			than not seek out albums that have not received public attention.<br> The first band I ever officially reviewed
+			was
+			Helltrain with their death ‘n’ roll classic, “Death is Coming”. I scored the album 65% and uploaded it to the site
+			on
+			the 23rd of October, 2021. Unofficially, the first time I ever listened to an album and wrote down the basis of a
+			review and gave it a score was a few months prior for Frozen Soul’s legendary “Crypt of Ice”. Since then, I’ve
+			gone
+			on
+			to publish eleven more reviews to <a href="https://www.metal-archives.com/users/Goblinite"> my profile</a> on the
+			site
+			ranging from death metal to crossover thrash and every style in between.
+		</p>
 
-<p style="text-align:center; color:white;" class="double"> My name is Tobias and I’ve been writing album reviews (albeit inconsistently) since October 2021. Thus far, I have uploaded my reviews to Encyclopedia Metallum or as it is better known, The Metal Archives. This site has been a critical part of my listening journey, boasting hundreds of thousands of user-submitted bands many of which I never would have otherwise discovered. Reading the reviews of other users eventually prompted me to begin writing my own album reviews. I’ve taken to heart the culture of their bi-annual review-writing challenge, which focuses on albums that have no reviews yet, dubbed “virgin albums”, and more often than not seek out albums that have not received public attention.<br> The first band I ever officially reviewed was Helltrain with their death ‘n’ roll classic, “Death is Coming”. I scored the album 65% and uploaded it to the site on the 23rd of October, 2021. Unofficially, the first time I ever listened to an album and wrote down the basis of a review and gave it a score was a few months prior for Frozen Soul’s legendary “Crypt of Ice”. Since then, I’ve gone on to publish eleven more reviews to <a href="https://www.metal-archives.com/users/Goblinite"> my profile</a> on the site ranging from death metal to crossover thrash and every style in between. 
-</p>
+		<p class="text-base double">So why focus on the underground? Why not just review the big
+			mainstream albums? Well why would I bother adding a review to a new big release that will already be talked about
+			around the internet and the world a hundred times before I've even awake? Point is, there's not much I can
+			contribute
+			by adding a review to an album that already has countless things said about it. <br> Focusing on the underground
+			also
+			gives more bands a chance to step into the spotlight and offer their music to the world, something I think the
+			metal
+			community has always done really well. If one of my reviews gives a band just the small push they need to start
+			profiting off their work, it would mean the world to me. <br> I have to be honest in my experience the underground
+			bands make infinitely better music anyway.
+		</p>
 
-<p style="text-align:center; color:white;" class="double">So why focus on the underground? Why not just review the big mainstream albums? Well why would I bother adding a review to a new big release that will already be talked about around the internet and the world a hundred times before I've even awake? Point is, there's not much I can contribute by adding a review to an album that already has countless things said about it. <br> Focusing on the underground also gives more bands a chance to step into the spotlight and offer their music to the world, something I think the metal community has always done really well. If one of my reviews gives a band just the small push they need to start profiting off their work, it would mean the world to me. <br> I have to be honest in my experience the underground bands make infinitely better music anyway.
-</p>
-
-<p style="text-align:center; color:white;" class="double">Thank you for learning a little about me and paying a visit to my site. Be sure to check out the archive to read all my past reviews and if you haven’t already, check out the latest news on the homepage. Stay metal! \m/ </p>
-
+		<p class="text-base double">Thank you for learning a little about me and paying a visit
+			to
+			my site. Be sure to check out the archive to read all my past reviews and if you haven’t already, check out the
+			latest
+			news on the homepage. Stay metal! \m/ </p>
+	</div>
 </body>
+
 </html>
