--- a/index.html
+++ b/index.html
@@ -1,88 +1,50 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<style>
-
-body {
-	background-image: url("reaper_boarder.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-}
-
-.container {
-position: relative;
-}
-
-.centered {
-position: absolute;
-bottom: 25px;
-left: 15px;
-color:white;
-font-size: 50px;
-text-align: center;
-border: solid;
-display: block;
-margin-left: auto;
-margin-right: auto;
-background-color: black;
-}
-
-.credit {
-position: absolute;
-bottom: 25px;
-right: 15px;
-color:red;
-font-size: 20px;
-text-align: center;
-display: block;
-margin-left: auto;
-margin-right: auto;
-background-color: white;
-}
-
-img {
-object-fit:cover;
-display: block;
-margin-left: auto;
-margin-right: auto;
-margin-bottom: 10px;
-}
-
-</style>
+	<link rel="stylesheet" href="main.css">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<title>Metal After Dark</title>
 </head>
 
-<img src="metalafterdark_final.jpg" alt="Metal After Dark logo"
-style=width:1000px;>
+<body>
+	<img src="images/metalafterdark_final.jpg" alt="Metal After Dark logo" class="logo">
+	<div class="container-width">
+		<h1 class="text-base">An Introduction to Metal After Dark</h1>
+		<p class="text-base">Welcome to Metal After Dark. This is my public journal and record of heavy metal albums,
+			focusing on the underground.</p>
+		<p class="text-base">At this stage, I am choosing only to cover full-length albums and I won’t be covering singles,
+			EPs, compilations, live records, etc.</p>
+		<p class="text-base"> This website provides my best attempt at an unbiased opinion on metal releases while also
+			shining a light on the hidden gems of the metal world. Scores are given based on musical techniques and
+			innovation, re-listen value and of course my enjoyment.</p>
+		<p class="text-base">I encourage anyone to send their reviews via the contact tab or recommendations for an album
+			for me to cover next.</p>
+		<p class="text-base">For your convenience, click the banner at the top of the page to return to the homepage any
+			time :)</p>
 
-<h1 style="text-align:center; color:white;">An Introduction to Metal After Dark</h1>
+		<div style="background-image: url(&quot;images/powerbox_blur.jpg&quot;);" class="container">
+			<div class="centered"><a href="news.htm">News</a></div>
+		</div>
 
-<p style="text-align:center; color:white; width:100%;">Welcome to Metal After Dark. This is my public journal and record of heavy metal albums, focusing on the underground.<br> At this stage, I am choosing only to cover full-length albums and I won’t be covering singles, EPs, compilations, live records, etc.<br> This website provides my best attempt at an unbiased opinion on metal releases while also shining a light on the hidden gems of the metal world. Scores are given based on musical techniques and innovation, re-listen value and of course my enjoyment.<br> I encourage anyone to send their reviews via the contact tab or recommendations for an album for me to cover next.<br> For your convenience, click the banner at the top of the page to return to the homepage any time :)</p> 
+		<div style="background-image: url(&quot;images/library_blur.jpg&quot;);" class="container">
+			<div class="centered"><a href="about_me.htm">About me</a></div>
+		</div>
 
-<div class="container">
-<img src="powerbox_blur.jpg" alt="News"
-style="width:100%;height:200px;border:3px solid #ffffff; padding:3px; margin:5px;">
-<div class="centered"><a href="news.htm">News</a></div>
-</div>
+		<div style="background-image: url(&quot;images/bookshelf_blur.jpg&quot;);" class="container">
+			<div class="centered"><a href="reviews.htm">Reviews</a></div>
+		</div>
 
-<div class="container">
-<img src="library_blur.jpg" alt="About me"
-style="width:100%;height:200px;border:3px solid #ffffff; padding:3px; margin:5px;">
-<div class="centered"><a href="about_me.htm">About me</a></div>
-</div>
+		<div style="background-image: url(&quot;images/river_blur.jpg&quot;);" class="container">
+			<div class="centered"><a href="contact.htm">Contact</a></div>
+			<div class="credit">
+				<i>Photo credit - Brodie Miles<a
+						href="https://instagram.com/brodie_miles?igshid=YmM0MjE2YWMzOA==">(@brodie_miles)</a></i>
+			</div>
+		</div>
+	</div>
 
-<div class="container">
-<img src="bookshelf_blur.jpg" alt="Reviews"
-style="width:100%;height:200px;border:3px solid #ffffff; padding:3px; margin:5px;">
-<div class="centered"><a href="reviews.htm">Reviews</a></div>
-</div>
-
-<div class="container">
-<img src="river_blur.jpg" alt="Contact"
-style="width:100%;height:200px;border:3px solid #ffffff; padding:3px; margin:5px;">
-<div class="centered"><a href="contact.htm">Contact</a></div>
-<div class="credit"><i>Photo credit - Brodie Miles<a href="https://instagram.com/brodie_miles?igshid=YmM0MjE2YWMzOA==">(@brodie_miles)</a></i></div>
-</div>
 
 </body>
+
 </html>
