--- a/r_Nithing.htm
+++ b/r_Nithing.htm
@@ -1,54 +1,84 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8" />
-<title>Reviews</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<meta charset="utf-8" />
+	<title>Reviews</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="main.css">
+
 <body>
 
-<style>
-body {
-	background-image: url("agonal_hymns_blur.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-}
+	<style>
+		body {
+			background-image: url("images/agonal_hymns_blur.jpg");
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+		}
+	</style>
+	</head>
 
-p {text-align: center;
-color: white;
-font-family: Times New Roman;
-}
+	<body>
+		<a href="reviews.htm">
+			<img src="images/r_metalafterdark.png" alt="Reviews" class="logo">
+		</a>
+		<div class="container-width">
+			<h1 class="review-headline">The Art of Brutality - 85%</h1>
+			<h3 class="review-album-link">Written for <a href="https://nithing.bandcamp.com/album/agonal-hymns">Nithing - Agonal Hymns</a></h3>
+			<p class="text-base">I have to start by saying I’m not a huge slam fan. It’s a laughable genre. But Nithing’s recent release,
+				‘Agonal
+				Hymns’ was slam done to perfection. They innovated the genre using some interesting features and didn’t overdo
+				the
+				vocals to the point of obnoxiousness, the element that has consistently managed to ruin slam for me. It’s worth
+				mentioning the simple red, blue and grey palette of the cover art was what drew me in - never mind the weird
+				flat-faced mouth-shrine thing in the centre. This was a perfect outline of what was to follow over the next nine
+				tracks. Simple, yet perfected, brutality. The band only gave me a few moments to take a breather through each
+				listen but honestly, I was enjoying it so much it caught me off guard. The sheer speed the drummer pummels each
+				beat with can only be rivaled by the disgusting demon vomit of vocals bringing an onslaught of violence to every
+				track. It’s not too high-pitched either. A lot of slam that utilises the ‘burping’ vocals always seems to get
+				too
+				pig-squealy, but Nithing keeps the pitch low and deep and this made for a far more enjoyable listen. The guitars
+				were used to create some interesting or even acoustic sounds that were overlaid with the riffing, resulting in a
+				far more memorable output. The snare tone was rather… questionable and got quite distracting (St. Anger snare?)
+				but it admittedly fits well within the genre.</p>
+			<p class="text-base">This album feels like being stabbed to death. Or shot full of rounds. Pick your poison. It’s dirty, it’s
+				demonic,
+				it’s filthy. Nothing about the sound comes even remotely close to beautiful or tasteful. Nithing has done an
+				expert job at crafting this sound, however. As mentioned, the vocals sound superb, especially for a slam album.
+				None of the deeply violent, nihilistic and philosophical vocals are intelligible through the demon vomit being
+				spat out every lyric but reading the lyrics, I’m glad they’re not. The vocals never devolve into pig squeals,
+				they
+				remain harsh but controlled and enhance the instrumentation rather than distract from it. Every song is played
+				at
+				a shockingly high BPM. Even during some of the slower-rhythmed sections, the double kicks blazed like a swarm of
+				locusts in my ears. The guitars would also sometimes create these siren or alarm-like sounds and harmonies like
+				an
+				internal sense of panic coming from the song. It was a bizarre feature but I appreciated having it to enjoy. The
+				snare is equally bizarre but perhaps in a not-so-good way. It’s tuned to sound echoey and metallic and I will
+				honestly compare it to the godforsaken St. Anger snare. It’s very distracting and hard to ignore given the
+				drummer
+				is striking it several times every second.
+			</p>
+			<p class="text-base">I thought some of the acoustic moments briefly layered in were an interesting touch. I wasn’t expecting to be
+				given a break while listening but Nithing has included these faint background acoustics, if you listen closely.
+				The most critical moments for these would be the short outro on ‘Feverish Pemphigoid Worship’ and the interlude
+				track ‘God: Emaciated’. Feverish Pemphigoid Worship closes with a wobbly-sounding bassline isolated for a brief
+				ten or so seconds before diving right back into ‘The Seeping Pus of Ancient Wounds’. It’s a neat little cut and
+				is
+				timed perfectly to be over before any listener has processed what they just heard.</p>
+			<p class="text-base">God: Emaciated is a lately-placed interlude, being the second-to-last track and mostly comprises of tense
+				ambience and a mysterious melodic section as it leads the listener towards the light at the end of the tunnel.
+				It
+				transitions perfectly and subtly into ‘Of Those Immortal, Longing for Decease’ the fitting close to Agonal
+				Hymns.
+			</p>
+			<p class="text-base">It’s a brutal album no doubt, but there is art to be found when listening closely. It’s definitely not for
+				everyone and don’t get me wrong; It sounds ugly and awful. Nonetheless, the musicianship must be respected for
+				the
+				effort put into it. I still quite enjoyed this album, but I’ll need to take time to digest it properly before I
+				can really listen to it another few times. </p>
+		</div>
+	</body>
 
-h1 {text-align: center;
-color: white;
-font-family: Times New Roman;
-font-size: 50px;
-}
-
-h3 {text-align: center;
-color: white;
-font-family: Times New Roman;
-border: 3px; solid; white;
-border-style: inset;
-background-color: white;
-}
-
-</style>
-</head>
-
-<a href="reviews.htm">
-<img src="r_metalafterdark.png" alt="Reviews"
-style=width:100%;>
-</a>
-
-<h1>The Art of Brutality - 85%</h1>
-<h3>Written for <a href="https://nithing.bandcamp.com/album/agonal-hymns">Nithing - Agonal Hymns</a></h3>
-<p>I have to start by saying I’m not a huge slam fan. It’s a laughable genre. But Nithing’s recent release, ‘Agonal Hymns’ was slam done to perfection. They innovated the genre using some interesting features and didn’t overdo the vocals to the point of obnoxiousness, the element that has consistently managed to ruin slam for me. It’s worth mentioning the simple red, blue and grey palette of the cover art was what drew me in - never mind the weird flat-faced mouth-shrine thing in the centre. This was a perfect outline of what was to follow over the next nine tracks. Simple, yet perfected, brutality. The band only gave me a few moments to take a breather through each listen but honestly, I was enjoying it so much it caught me off guard. The sheer speed the drummer pummels each beat with can only be rivaled by the disgusting demon vomit of vocals bringing an onslaught of violence to every track. It’s not too high-pitched either. A lot of slam that utilises the ‘burping’ vocals always seems to get too pig-squealy, but Nithing keeps the pitch low and deep and this made for a far more enjoyable listen. The guitars were used to create some interesting or even acoustic sounds that were overlaid with the riffing, resulting in a far more memorable output. The snare tone was rather… questionable and got quite distracting (St. Anger snare?) but it admittedly fits well within the genre.</p>
-<p>This album feels like being stabbed to death. Or shot full of rounds. Pick your poison. It’s dirty, it’s demonic, it’s filthy. Nothing about the sound comes even remotely close to beautiful or tasteful. Nithing has done an expert job at crafting this sound, however. As mentioned, the vocals sound superb, especially for a slam album. None of the deeply violent, nihilistic and philosophical vocals are intelligible through the demon vomit being spat out every lyric but reading the lyrics, I’m glad they’re not. The vocals never devolve into pig squeals, they remain harsh but controlled and enhance the instrumentation rather than distract from it. Every song is played at a shockingly high BPM. Even during some of the slower-rhythmed sections, the double kicks blazed like a swarm of locusts in my ears. The guitars would also sometimes create these siren or alarm-like sounds and harmonies like an internal sense of panic coming from the song. It was a bizarre feature but I appreciated having it to enjoy. The snare is equally bizarre but perhaps in a not-so-good way. It’s tuned to sound echoey and metallic and I will honestly compare it to the godforsaken St. Anger snare. It’s very distracting and hard to ignore given the drummer is striking it several times every second. 
-</p>
-<p>I thought some of the acoustic moments briefly layered in were an interesting touch. I wasn’t expecting to be given a break while listening but Nithing has included these faint background acoustics, if you listen closely. The most critical moments for these would be the short outro on ‘Feverish Pemphigoid Worship’ and the interlude track ‘God: Emaciated’. Feverish Pemphigoid Worship closes with a wobbly-sounding bassline isolated for a brief ten or so seconds before diving right back into ‘The Seeping Pus of Ancient Wounds’. It’s a neat little cut and is timed perfectly to be over before any listener has processed what they just heard.</p>
-<p>God: Emaciated is a lately-placed interlude, being the second-to-last track and mostly comprises of tense ambience and a mysterious melodic section as it leads the listener towards the light at the end of the tunnel. It transitions perfectly and subtly into ‘Of Those Immortal, Longing for Decease’ the fitting close to Agonal Hymns.
-</p>
-<p>It’s a brutal album no doubt, but there is art to be found when listening closely. It’s definitely not for everyone and don’t get me wrong; It sounds ugly and awful. Nonetheless, the musicianship must be respected for the effort put into it. I still quite enjoyed this album, but I’ll need to take time to digest it properly before I can really listen to it another few times. </p>
-</body>
 </html>
