--- a/r_Anatomy.htm
+++ b/r_Anatomy.htm
@@ -1,53 +1,88 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8" />
-<title>Blackened Death Sensation</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<meta charset="utf-8" />
+	<title>Blackened Death Sensation</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="main.css">
 
-<style>
-body {
-	background-image: url("anatomy.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-}
-
-p {text-align: center;
-color: white;
-font-family: Times New Roman;
-}
-
-h1 {text-align: center;
-color: white;
-font-family: Times New Roman;
-font-size: 50px;
-}
-
-h3 {text-align: center;
-color: white;
-font-family: Times New Roman;
-border: 3px; solid; white;
-border-style: inset;
-background-color: white;
-}
-
-</style>
+	<style>
+		body {
+			background-image: url("images/anatomy.jpg");
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+		}
+	</style>
 </head>
 
 <body>
-<a href="reviews.htm">
-<img src="r_metalafterdark.png" alt="Reviews"
-style=width:100%;>
-</a>
-
-<h1><i>Blackened death sensation - 88%</i></h1>
-<h3><b><a href="https://open.spotify.com/album/5Hvp1T80HrlaJLWBQMPntw?si=a72543a6205e4dee">Anatomy - The Witches of Dathomir</b></a></h3>
-<p>Anatomy's 1999 album 'The Witches of Dathomir' presents what I have found to be a sinisterly delightful blackened death sound. Blending anguished black metal instrumentals with powerful death metal screams, snarls and growls truly is what gives this album its unique flavour. The band also weaves acoustic or melodic sections in and out of the album at perfect points while never faltering from their death and black roots. Some tracks' sections are transformed seamlessly from black metal to a rock-esque-style rhythm and then back again in a pleasant manner that never disrupts the flow of a song. Its this level of variety that sets the record apart from the average run-of-the-mill death or black metal production.</p>
-<p>Listening to the 2016 re-release provides an incredibly rich sound quality. Every note is sharp as steel, every drum beat is crisp; yet none of the metal sound has been sacrificed for this quality. Production of this quality really adds to the haunting atmosphere overshadowing the album. The sinister opening track 'Ambrosia Death' fades in with a gentle acoustic intro that, while pleasant sounding to begin with, descends in and out of a dark-sounding melody almost as a musical warning for the next forty minutes the record presents. A feature of this album I quite enjoyed was these acoustic moments, sporadically placed among a few of the tracks, most notably on the bridge of 'Cauldron Nebular'. This strategic placement was a creative way to add variety a little over halfway into listening. Let's be honest, albums that are nothing but aggressive do need moments in between to emphasise moments and keep ears engaged. Thankfully, it isn't overdone either as while maintaining a slow swinging pace, the band ramps up the dreary tone in utter despair in a chilling manner. A few more of these acoustic moments, or even an entire track, might have added some more variation, but granted; this is black metal. Besides, that really is why melodic subgenres exist anyway.</p>
-<p>The blackened death mix is married perfectly by the vocals and the instruments. Tuned and toned to black metal perfection, the guitars are ruthless in their speed and menacing in their slower moments. The drums never stop, pushing out faster and faster blast beats, or a steadily-paced swing beat supported by constant double kicks working in perfect synchronicity. The vocals are undoubtedly rooted in death metal with deep throaty snarls and growls delivering every line with sheer volume. This obvious fusion of genres fits together perfectly. It creates an engaging sound that will keep anyone hooked right down to the last ear-splitting moment and I have to applaud the band for executing this so perfectly. As someone who has tried time and again to get into black metal, its records like this that give me hope.</p>
-<p>There are many moments as I've mentioned where the speed and rhythm can change with little to no warning while still remaining to be a seamless transition. Having a track broken up into swing sections is a real treat for me in metal, especially in such an unexpected genre. This particularly stuck out to me on the track 'Far From the World of Blue'. The track starts with a rock and roll-sounding rhythm with the exception of a steady backing double kick. Being one of the longest tracks on the album, I had expectations for it. Those expectations were met in ways I couldn't have expected and I would confidently say it was my favourite track of the album.</p>
-<p>While the band expertly crafts variety into the instrumentation, they only give small taste tests of other elements which I would have loved to see more of. For example, the brief amount of synth on 'Blood will follow thee' was unpredictable, yet I wanted to hear it return at a later point. Sadly, my wish was never met and I will forever be trying to repair the hole in my heart. On the vocal side of things, a single line is screamed in an unorthodox power metal-style on 'Suncrusher', another minor element which was done artistically and could certainly have been used a few more times. It almost feels like the band played around with these elements, but was too afraid to fully commit to using them. Of course, it doesn't take away from the glorious sound thus far produced, but certainly could have added much more to it.</p>
-<p>'The Witches of Dathomir' is a brutal blackened death record that maintains violence and variety. Its unique experimentation of minor elements and sounds creates many memorable moments, even if they weren't later expanded upon. Anatomy has built this upon the roots of black metal and death metal and pulverises, terrifies and bleeds at every corner and turn. I would certainly recommend this album to any death metal fan ready to explore the dark and cold realm that is black metal.</p>
+	<a href="reviews.htm">
+		<img src="images/r_metalafterdark.png" alt="Reviews" class="logo">
+	</a>
+	<div class="container-width">
+		<h1 class="review-headline"><i>Blackened death sensation - 88%</i></h1>
+		<h3 class="review-album-link"><a href="https://open.spotify.com/album/5Hvp1T80HrlaJLWBQMPntw?si=a72543a6205e4dee">Anatomy - The Witches of
+				Dathomir</a></h3>
+		<p class="text-base">Anatomy's 1999 album 'The Witches of Dathomir' presents what I have found to be a sinisterly
+			delightful blackened death sound. Blending anguished black metal instrumentals with powerful death metal screams,
+			snarls and growls truly is what gives this album its unique flavour. The band also weaves acoustic or melodic
+			sections in and out of the album at perfect points while never faltering from their death and black roots. Some
+			tracks' sections are transformed seamlessly from black metal to a rock-esque-style rhythm and then back again in a
+			pleasant manner that never disrupts the flow of a song. Its this level of variety that sets the record apart from
+			the average run-of-the-mill death or black metal production.</p>
+		<p class="text-base">Listening to the 2016 re-release provides an incredibly rich sound quality. Every note is sharp
+			as steel, every drum beat is crisp; yet none of the metal sound has been sacrificed for this quality. Production
+			of
+			this quality really adds to the haunting atmosphere overshadowing the album. The sinister opening track 'Ambrosia
+			Death' fades in with a gentle acoustic intro that, while pleasant sounding to begin with, descends in and out of a
+			dark-sounding melody almost as a musical warning for the next forty minutes the record presents. A feature of this
+			album I quite enjoyed was these acoustic moments, sporadically placed among a few of the tracks, most notably on
+			the
+			bridge of 'Cauldron Nebular'. This strategic placement was a creative way to add variety a little over halfway
+			into
+			listening. Let's be honest, albums that are nothing but aggressive do need moments in between to emphasise moments
+			and keep ears engaged. Thankfully, it isn't overdone either as while maintaining a slow swinging pace, the band
+			ramps up the dreary tone in utter despair in a chilling manner. A few more of these acoustic moments, or even an
+			entire track, might have added some more variation, but granted; this is black metal. Besides, that really is why
+			melodic subgenres exist anyway.</p>
+		<p class="text-base">The blackened death mix is married perfectly by the vocals and the instruments. Tuned and toned
+			to black metal perfection, the guitars are ruthless in their speed and menacing in their slower moments. The drums
+			never stop, pushing out faster and faster blast beats, or a steadily-paced swing beat supported by constant double
+			kicks working in perfect synchronicity. The vocals are undoubtedly rooted in death metal with deep throaty snarls
+			and growls delivering every line with sheer volume. This obvious fusion of genres fits together perfectly. It
+			creates an engaging sound that will keep anyone hooked right down to the last ear-splitting moment and I have to
+			applaud the band for executing this so perfectly. As someone who has tried time and again to get into black metal,
+			its records like this that give me hope.</p>
+		<p class="text-base">There are many moments as I've mentioned where the speed and rhythm can change with little to
+			no
+			warning while still remaining to be a seamless transition. Having a track broken up into swing sections is a real
+			treat for me in metal, especially in such an unexpected genre. This particularly stuck out to me on the track 'Far
+			From the World of Blue'. The track starts with a rock and roll-sounding rhythm with the exception of a steady
+			backing double kick. Being one of the longest tracks on the album, I had expectations for it. Those expectations
+			were met in ways I couldn't have expected and I would confidently say it was my favourite track of the album.</p>
+		<p class="text-base">While the band expertly crafts variety into the instrumentation, they only give small taste
+			tests
+			of other elements which I would have loved to see more of. For example, the brief amount of synth on 'Blood will
+			follow thee' was unpredictable, yet I wanted to hear it return at a later point. Sadly, my wish was never met and
+			I
+			will forever be trying to repair the hole in my heart. On the vocal side of things, a single line is screamed in
+			an
+			unorthodox power metal-style on 'Suncrusher', another minor element which was done artistically and could
+			certainly
+			have been used a few more times. It almost feels like the band played around with these elements, but was too
+			afraid
+			to fully commit to using them. Of course, it doesn't take away from the glorious sound thus far produced, but
+			certainly could have added much more to it.</p>
+		<p class="text-base">'The Witches of Dathomir' is a brutal blackened death record that maintains violence and
+			variety.
+			Its unique experimentation of minor elements and sounds creates many memorable moments, even if they weren't later
+			expanded upon. Anatomy has built this upon the roots of black metal and death metal and pulverises, terrifies and
+			bleeds at every corner and turn. I would certainly recommend this album to any death metal fan ready to explore
+			the
+			dark and cold realm that is black metal.</p>
+	</div>
 </body>
+
 </html>
