--- a/r_Beyond Agony.htm
+++ b/r_Beyond Agony.htm
@@ -1,52 +1,65 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8" />
-<title>Copied and pasted</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<meta charset="utf-8" />
+	<title>Copied and pasted</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="main.css">
 
-<style>
-body {
-	background-image: url("beyond_agony.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-}
-
-p {text-align: center;
-color: white;
-font-family: Times New Roman;
-}
-
-h1 {text-align: center;
-color: white;
-font-family: Times New Roman;
-font-size: 50px;
-}
-
-h3 {text-align: center;
-color: white;
-font-family: Times New Roman;
-border: 3px; solid; white;
-border-style: inset;
-background-color: white;
-}
-
-</style>
+	<style>
+		body {
+			background-image: url("images/beyond_agony.jpg");
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+		}
+	</style>
 </head>
 
 <body>
-<a href="reviews.htm">
-<img src="r_metalafterdark.png" alt="Reviews"
-style=width:100%;>
-</a>
-
-<h1><i>Copied and pasted - 40%</i></h1>
-<h3><b><a href="https://open.spotify.com/album/2McfvfUxOPqcHYELlKGEnT?si=589e498790494749">Beyond Agony - Embrace the Inferno</b></a></h3>
-<p>‘Embrace the Inferno’ seemed like a promising groove/thrash album at first and it’s always fun discovering a niche little album as such all the way back from 2009. Certainly the first few tracks seemed promising enough and the band seemed to bring their energy. But upon further and further listening to the album, Embrace the Inferno revealed more and more of its blandness right until the final title track to which my reaction simply was “well that happened”. Maybe this would have been more tolerable if it had been a thirty to forty minute album, or even just as an EP, but this is an hour of my life I’ll never get back.</p>
-<p>The first thirty seconds are really the only enjoyable moments for me. Opening with ‘The Darkest Hour’ I was lulled into a false sense of believing this would be an absolutely pulverising thrash album reminiscent of bands like Testament and Slayer. Beyond Agony also does some really nice melodic riffs throughout the verses of The Darkest Hour and I wasn’t complaining (at first). The instrumentation had a razor-sharp sound and tone to it which paired with the production, was sublime to listen to. The vocals screams were a bit soft and never really felt as harsh as they could be. At a few moments I could even hear the singer’s voice crack and slip into his regular voice for a split second. Nonetheless, I could look past this for the first track (admittedly a pretty damn good song and my favourite on the record) and possibly the next two or three. But that’s about all I have to say for the album. From there it quickly became unexciting.</p>
-<p>It becomes very obvious that Beyond Agony have a tried and tested formula for writing songs as if they were factory-manufactured. For the shorter tracks, there would just be a very plain, stereotypical hard rock riff with a quick solo before switching to a half-time breakdown following the bridge. It’s a shame, the solos were played like lightning but they became redundant when they were just there to fill the atmosphere. The same could be said about the breakdowns. There was not a single track that did not feature a breakdown. If there’s one thing that annoys me, its obnoxious deathcore breakdowns. If there’s one thing that straight up pisses me off, it’s metal albums that make me feel like I’m listening to deathcore. If any of these breakdowns had been the only one or two to feature on the album, they would have enhanced that track and given it something unique. But no, they were copied and pasted across to every track, sucking out any trace of individuality each song might have possessed. </p>
-<p>Some of the longer tracks that clocked in around the seven to eight minute mark followed this same formula but would just slap on a random melodic or acoustic sequence before the breakdown. The only variety this really created was that instead of the album being all the same songs, it was all the same songs except long and short versions. I didn’t enjoy them and if these longer tracks weren’t there or were at least cut shorter the album might have been saved by a shorter runtime. Alas, every listener is subjected to the full hour. </p>
-<p>If I had heard any of the tracks released as a single, I probably would have them on full blast because on their own, they do create a nice hard rock/groove metal blend. But hearing eleven tracks that are essentially the same has done my head in. Thank fuck for the opener The Darkest Hour because in fairness it is the most thrashy and the most unique. I would’ve loved a memorable groove metal album but this just isn’t it. Well, that album happened I guess.</p>
+	<a href="reviews.htm">
+		<img src="images/r_metalafterdark.png" alt="Reviews" class="logo">
+	</a>
+	<div class="container-width">
+	<h1 class="review-headline"><i>Copied and pasted - 40%</i></h1>
+	<h3 class="review-album-link"><a href="https://open.spotify.com/album/2McfvfUxOPqcHYELlKGEnT?si=589e498790494749">Beyond Agony - Embrace the
+				Inferno</a></h3>
+	<p class="text-base">‘Embrace the Inferno’ seemed like a promising groove/thrash album at first and it’s always fun discovering a niche
+		little album as such all the way back from 2009. Certainly the first few tracks seemed promising enough and the band
+		seemed to bring their energy. But upon further and further listening to the album, Embrace the Inferno revealed more
+		and more of its blandness right until the final title track to which my reaction simply was “well that happened”.
+		Maybe this would have been more tolerable if it had been a thirty to forty minute album, or even just as an EP, but
+		this is an hour of my life I’ll never get back.</p>
+	<p class="text-base">The first thirty seconds are really the only enjoyable moments for me. Opening with ‘The Darkest Hour’ I was lulled
+		into a false sense of believing this would be an absolutely pulverising thrash album reminiscent of bands like
+		Testament and Slayer. Beyond Agony also does some really nice melodic riffs throughout the verses of The Darkest
+		Hour and I wasn’t complaining (at first). The instrumentation had a razor-sharp sound and tone to it which paired
+		with the production, was sublime to listen to. The vocals screams were a bit soft and never really felt as harsh as
+		they could be. At a few moments I could even hear the singer’s voice crack and slip into his regular voice for a
+		split second. Nonetheless, I could look past this for the first track (admittedly a pretty damn good song and my
+		favourite on the record) and possibly the next two or three. But that’s about all I have to say for the album. From
+		there it quickly became unexciting.</p>
+	<p class="text-base">It becomes very obvious that Beyond Agony have a tried and tested formula for writing songs as if they were
+		factory-manufactured. For the shorter tracks, there would just be a very plain, stereotypical hard rock riff with a
+		quick solo before switching to a half-time breakdown following the bridge. It’s a shame, the solos were played like
+		lightning but they became redundant when they were just there to fill the atmosphere. The same could be said about
+		the breakdowns. There was not a single track that did not feature a breakdown. If there’s one thing that annoys me,
+		its obnoxious deathcore breakdowns. If there’s one thing that straight up pisses me off, it’s metal albums that make
+		me feel like I’m listening to deathcore. If any of these breakdowns had been the only one or two to feature on the
+		album, they would have enhanced that track and given it something unique. But no, they were copied and pasted across
+		to every track, sucking out any trace of individuality each song might have possessed. </p>
+	<p class="text-base">Some of the longer tracks that clocked in around the seven to eight minute mark followed this same formula but
+		would just slap on a random melodic or acoustic sequence before the breakdown. The only variety this really created
+		was that instead of the album being all the same songs, it was all the same songs except long and short versions. I
+		didn’t enjoy them and if these longer tracks weren’t there or were at least cut shorter the album might have been
+		saved by a shorter runtime. Alas, every listener is subjected to the full hour. </p>
+	<p class="text-base">If I had heard any of the tracks released as a single, I probably would have them on full blast because on their
+		own, they do create a nice hard rock/groove metal blend. But hearing eleven tracks that are essentially the same has
+		done my head in. Thank fuck for the opener The Darkest Hour because in fairness it is the most thrashy and the most
+		unique. I would’ve loved a memorable groove metal album but this just isn’t it. Well, that album happened I guess.
+	</p>
+</div>
 </body>
+
 </html>
