--- a/r_Helltrain.htm
+++ b/r_Helltrain.htm
@@ -1,58 +1,82 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8" />
-<title>Solid enough, could do with some more spice</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-
-<style>
-body {
-	background-image: url("helltrain.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-}
-
-p {text-align: center;
-color: white;
-font-family: Times New Roman;
-}
-
-h1 {text-align: center;
-color: white;
-font-family: Times New Roman;
-font-size: 50px;
-}
-
-h3 {text-align: center;
-color: white;
-font-family: Times New Roman;
-border: 3px; solid; white;
-border-style: inset;
-background-color: white;
-}
-
-</style>
+	<meta charset="utf-8" />
+	<title>Solid enough, could do with some more spice</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="main.css">
+	<style>
+		body {
+			background-image: url("images/helltrain.jpg");
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+		}
+	</style>
 </head>
 
 <body>
-<a href="reviews.htm">
-<img src="r_metalafterdark.png" alt="Reviews"
-style=width:100%;>
-</a>
+	<a href="reviews.htm">
+		<img src="images/r_metalafterdark.png" alt="Reviews" class="logo">
+	</a>
+	<div class="container-width">
+		<h1 class="review-headline"><i>Solid enough, could do with some more spice - 65%</i></h1>
+		<h3 class="review-album-link"><a
+				href="https://open.spotify.com/album/08NzCdMgpSfnr7THyfVPxW?si=wtgFUN3hQmGT93aedhdrrw">Helltrain - Death is
+				Coming</a></h3>
 
-<h1><i>Solid enough, could do with some more spice - 65%</i></h1>
-<h3><b><a href="https://open.spotify.com/album/08NzCdMgpSfnr7THyfVPxW?si=wtgFUN3hQmGT93aedhdrrw">Helltrain - Death is Coming</b></a></h3>
+		<p class="text-base">As a fan of death metal, I was curious as to what this "death 'n' roll" subgenre was, and I
+			stumbled upon this
+			album. At first, the album seems promising enough - the opening track certainly had my blood pumping. However, as
+			the album progressed, it seemed to get more and more repetitive. Certainly, the rock 'n' roll theme itself was
+			exciting, as I love a good rock anthem. It seemed though by constantly reinforcing the badassery of rock 'n' roll,
+			the album tries to distract you from its biggest flaw: Repetitiveness.</p>
 
-<p>As a fan of death metal, I was curious as to what this "death 'n' roll" subgenre was, and I stumbled upon this album. At first, the album seems promising enough - the opening track certainly had my blood pumping. However, as the album progressed, it seemed to get more and more repetitive. Certainly, the rock 'n' roll theme itself was exciting, as I love a good rock anthem. It seemed though by constantly reinforcing the badassery of rock 'n' roll, the album tries to distract you from its biggest flaw: Repetitiveness.</p>
+		<p class="text-base">As I mentioned, the first few tracks off the album were solid, with some catchy riffs and fast,
+			almost punk-style
+			drumming. The vocals were a good balance between the realm of death metal, while still being heavy enough to put
+			the
+			death in death 'n' roll. The solos were equally exciting, but the lack of transitioning from chorus to solo, then
+			back again made it seem like a poor substitute for a compelling bridge that would have given each track something
+			unique and distracted me from the formula that soon became evident for each song. Nonetheless, I did enjoy the
+			extra
+			instruments that you typically wouldn't expect that did give this album some flavour. Hearing a synthesiser making
+			an appearance on a few tracks was certainly a treat. 'Mr. Cooger' was undeniably the high point of this album, the
+			perfect song for this season of spooks. It left me beyond satisfied with its lyrical horrors ("Late at night and
+			you're safe and sound/Meet Mr. Cooger as he haunts the ground/Tyrant's sleep where no demons go/Here goes Mr.
+			Cooger
+			to come reap and sow") paired with the fast pace and background choir vocals. Listening to this, I could certainly
+			imagine fleeing from Mr. Cooger on a dark street on Halloween. The next track 'Ghouls and Goblins' again is a more
+			goth-rock style, but still has a solid death 'n' roll backbone. I really would have loved to hear more of these
+			melodic/goth elements throughout the rest of the album, but sadly Helltrain decide to stay rooted in a
+			conventional
+			rock- I mean death 'n' roll style.</p>
 
-<p>As I mentioned, the first few tracks off the album were solid, with some catchy riffs and fast, almost punk-style drumming. The vocals were a good balance between the realm of death metal, while still being heavy enough to put the death in death 'n' roll. The solos were equally exciting, but the lack of transitioning from chorus to solo, then back again made it seem like a poor substitute for a compelling bridge that would have given each track something unique and distracted me from the formula that soon became evident for each song. Nonetheless, I did enjoy the extra instruments that you typically wouldn't expect that did give this album some flavour. Hearing a synthesiser making an appearance on a few tracks was certainly a treat. 'Mr. Cooger' was undeniably the high point of this album, the perfect song for this season of spooks. It left me beyond satisfied with its lyrical horrors ("Late at night and you're safe and sound/Meet Mr. Cooger as he haunts the ground/Tyrant's sleep where no demons go/Here goes Mr. Cooger to come reap and sow") paired with the fast pace and background choir vocals. Listening to this, I could certainly imagine fleeing from Mr. Cooger on a dark street on Halloween. The next track 'Ghouls and Goblins' again is a more goth-rock style, but still has a solid death 'n' roll backbone. I really would have loved to hear more of these melodic/goth elements throughout the rest of the album, but sadly Helltrain decide to stay rooted in a conventional rock- I mean death 'n' roll style.</p>
+		<p class="text-base">The rest of the album, for the most part, does not offer anything stand-outish, aside from the
+			solos (not just
+			limited to guitar!). I would have probably been hitting my head against a wall if it weren't for the diversity of
+			instruments making an appearance for the short and sweet solos ranging from bass to piano. (And a drum fill long
+			enough to be its own short solo). Having said that, I did mention earlier the solos seem like a bad substitute for
+			a
+			bridge which I believe would have made each track more memorable as an individual. The chord progressions are
+			simple
+			and become mundane, which unfortunately reflects onto this album as a whole because riffs are pretty damn
+			important.
+		</p>
 
-<p>The rest of the album, for the most part, does not offer anything stand-outish, aside from the solos (not just limited to guitar!). I would have probably been hitting my head against a wall if it weren't for the diversity of instruments making an appearance for the short and sweet solos ranging from bass to piano. (And a drum fill long enough to be its own short solo). Having said that, I did mention earlier the solos seem like a bad substitute for a bridge which I believe would have made each track more memorable as an individual. The chord progressions are simple and become mundane, which unfortunately reflects onto this album as a whole because riffs are pretty damn important.
-</p>
-
-<p>For the most part, this album is still exciting enough - hearing unconventional instruments like a piano or synth is something refreshing that when done right, creates a kickass metal song. The solos on their own are crafted well, however, they do seem forced. But there are some quick bass solos thrown in, and I love a good bass solo. Regardless, I would've liked to hear some variety throughout this album though. Much like AC/DC, the riffs are essentially the same but they have the hard rock energy that will keep you engaged for just long enough. This album is by no means terrible - I still enjoyed listening to it. It's worth your forty minutes if you enjoy the rock 'n' roll get pumped-type energy with some spice thrown in.
-</p>
-
+		<p class="text-base">For the most part, this album is still exciting enough - hearing unconventional instruments
+			like a piano or synth
+			is something refreshing that when done right, creates a kickass metal song. The solos on their own are crafted
+			well,
+			however, they do seem forced. But there are some quick bass solos thrown in, and I love a good bass solo.
+			Regardless, I would've liked to hear some variety throughout this album though. Much like AC/DC, the riffs are
+			essentially the same but they have the hard rock energy that will keep you engaged for just long enough. This
+			album
+			is by no means terrible - I still enjoyed listening to it. It's worth your forty minutes if you enjoy the rock 'n'
+			roll get pumped-type energy with some spice thrown in.
+		</p>
+	</div>
 </body>
+
 </html>
