--- a/r_Hooded Menace.htm
+++ b/r_Hooded Menace.htm
@@ -1,55 +1,87 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8" />
-<title>Menacingly Tritonus</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-
-<style>
-body {
-	background-image: url("hooded_menace.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-}
-
-p {text-align: center;
-color: white;
-font-family: Times New Roman;
-}
-
-h1 {text-align: center;
-color: white;
-font-family: Times New Roman;
-font-size: 50px;
-}
-
-h3 {text-align: center;
-color: white;
-font-family: Times New Roman;
-border: 3px; solid; white;
-border-style: inset;
-background-color: white;
-}
-
-</style>
+	<meta charset="utf-8" />
+	<title>Menacingly Tritonus</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="main.css">
+	<style>
+		body {
+			background-image: url("images/hooded_menace.jpg");
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+		}
+	</style>
 </head>
 
 <body>
-<a href="reviews.htm">
-<img src="r_metalafterdark.png" alt="Reviews"
-style=width:100%;>
-</a>
+	<a href="reviews.htm">
+		<img src="images/r_metalafterdark.png" alt="Reviews" class="logo">
+	</a>
+	<div class="container-width">
+		<h1 class="review-headline"><i>Menacingly Tritonus - 95%</i></h1>
+		<h3 class="review-album-link"><a
+				href="https://open.spotify.com/album/0x4i70nD0RJfABpctTg7zn?si=af29a44d382d498b">Hooded Menace - The
+				Tritonus Bell</a></h3>
 
-<h1><i>Menacingly Tritonus - 95%</i></h1>
-<h3><b><a href="https://open.spotify.com/album/0x4i70nD0RJfABpctTg7zn?si=af29a44d382d498b">Hooded Menace - The Tritonus Bell</b></a></h3>
+		<p class="text-base">Seeing the terrifyingly ghastly album cover for Hooded Menace’s latest album intrigued me
+			immediately and I was
+			without a doubt not disappointed by the contents. The Finnish death-doom titans perfectly intertwine the death to
+			the doom without being some half-assed death metal band trying to play slow. At some points, delving into the
+			realm
+			of melodic death added another spanner into the works of this pure horror movie track album which I for one quite
+			enjoyed. The album took me on twists and turns through its subtle change of tempo creating a terrifying
+			unpredictable atmosphere all while the tritonus bell tolled. Gritty guitars and bass and pounding drums expertly
+			write the recipe for death-doom perfection. Clocking out at a signature Hooded Menace 8-track, 50-minute album, it
+			was well worth the listen.</p>
+		<p class="text-base">I know album art isn’t an important factor for some metalheads, but I for one was drawn in by
+			this cover like the
+			pied piper. Hooded pied piper perhaps? The creativity behind the design that so effectively captures an intangible
+			atmosphere is well worth a quick mention. This art alone deserves a photo frame above my CD player.</p>
+		<p class="text-base">As for the music itself, the subtlety of weaving in and out of tempos while maintaining a
+			constant atmosphere has
+			to be my favorite technique employed throughout the album. It is done to an exceptional standard and solidifies
+			what
+			the death-doom genre should be. With just one fill from the almighty drums, the band will slow down as the guitars
+			come in to create a beautiful melodic atmosphere before the band may turn around and mortify the atmosphere once
+			again. Songs including “Blood Ornaments”, “Those Who Absorb The Night” make the album’s length well worth the
+			experience because of this unpredictability. The melodic harmonies pair exceptionally with the slower parts of the
+			album, flawlessly creating a more ominous tone to unite with the creeping rhythms.</p>
+		<p class="text-base">Of course, when Hooded Menace turn the dial up on the tempo, the intensity creates an exciting
+			listening
+			experience. The bass is a constant, chugging, gritty steamroller that blends beautifully with the
+			creatively-written
+			guitar riffs that are more than headbang-worthy. This nightmarish combination builds the sinister atmosphere
+			promised by the album cover, which I again reference because it is one of the most creative album covers I’ve
+			seen,
+			at least in my opinion. The drumming solidly provides a foundation for this atmosphere without being too excessive
+			while still remaining interesting with some solid fills and tempo changes. Given the reliability on cymbals for
+			the
+			slower parts of the album, the drummer avoids becoming redundant, keeping it engaging from track to track.</p>
+		<p class="text-base">The deep bellowing growls of Hooded Menace are, at least for me, the most impressive
+			performance across this
+			album.
+			The slow and mighty cries are truly frightful. I love a good vocal performance, but to say these were impressive
+			is
+			an understatement. I can imagine the bell-toller on the album cover to be the one singing in this deathly tone.
+			They
+			serve their role well in creating the dread of The Tritonus Bell, and as does everything else, they never over nor
+			underperform.
+		</p>
+		<p class="text-base">The Tritonus Bell was for me a fantastic proper introduction to death-doom, having not explored
+			the genre much
+			prior to listening to it and after delving into more death-doom, Hooded Menace still remains a top-tier band for
+			me.
+			The album is superbly crafted together and has an eager competing spot for my album of the year. The variety
+			builds
+			an unpredictable atmosphere of death and terror that will certainly keep you engaged if for whatever reason you
+			haven’t listened to this album yet. The Tritonus Bell itself is in fact pure terror in musical form, unnoticeably
+			alternating between fast and slow tempos with hypnotizing melodies that are sure to leave your death and doom fits
+			of hunger satiated with each listen.</p>
+	</div>
 
-<p>Seeing the terrifyingly ghastly album cover for Hooded Menace’s latest album intrigued me immediately and I was without a doubt not disappointed by the contents. The Finnish death-doom titans perfectly intertwine the death to the doom without being some half-assed death metal band trying to play slow. At some points, delving into the realm of melodic death added another spanner into the works of this pure horror movie track album which I for one quite enjoyed. The album took me on twists and turns through its subtle change of tempo creating a terrifying unpredictable atmosphere all while the tritonus bell tolled. Gritty guitars and bass and pounding drums expertly write the recipe for death-doom perfection. Clocking out at a signature Hooded Menace 8-track, 50-minute album, it was well worth the listen.</p>
-<p>I know album art isn’t an important factor for some metalheads, but I for one was drawn in by this cover like the pied piper. Hooded pied piper perhaps? The creativity behind the design that so effectively captures an intangible atmosphere is well worth a quick mention. This art alone deserves a photo frame above my CD player.</p>
-<p>As for the music itself, the subtlety of weaving in and out of tempos while maintaining a constant atmosphere has to be my favorite technique employed throughout the album. It is done to an exceptional standard and solidifies what the death-doom genre should be. With just one fill from the almighty drums, the band will slow down as the guitars come in to create a beautiful melodic atmosphere before the band may turn around and mortify the atmosphere once again. Songs including “Blood Ornaments”, “Those Who Absorb The Night” make the album’s length well worth the experience because of this unpredictability. The melodic harmonies pair exceptionally with the slower parts of the album, flawlessly creating a more ominous tone to unite with the creeping rhythms.</p>
-<p>Of course, when Hooded Menace turn the dial up on the tempo, the intensity creates an exciting listening experience. The bass is a constant, chugging, gritty steamroller that blends beautifully with the creatively-written guitar riffs that are more than headbang-worthy. This nightmarish combination builds the sinister atmosphere promised by the album cover, which I again reference because it is one of the most creative album covers I’ve seen, at least in my opinion. The drumming solidly provides a foundation for this atmosphere without being too excessive while still remaining interesting with some solid fills and tempo changes. Given the reliability on cymbals for the slower parts of the album, the drummer avoids becoming redundant, keeping it engaging from track to track.</p>
-<p>The deep bellowing growls of Hooded Menace are, at least for me, the most impressive performance across this album. The slow and mighty cries are truly frightful. I love a good vocal performance, but to say these were impressive is an understatement. I can imagine the bell-toller on the album cover to be the one singing in this deathly tone. They serve their role well in creating the dread of The Tritonus Bell, and as does everything else, they never over nor underperform.
-</p>
-<p>The Tritonus Bell was for me a fantastic proper introduction to death-doom, having not explored the genre much prior to listening to it and after delving into more death-doom, Hooded Menace still remains a top-tier band for me. The album is superbly crafted together and has an eager competing spot for my album of the year. The variety builds an unpredictable atmosphere of death and terror that will certainly keep you engaged if for whatever reason you haven’t listened to this album yet. The Tritonus Bell itself is in fact pure terror in musical form, unnoticeably alternating between fast and slow tempos with hypnotizing melodies that are sure to leave your death and doom fits of hunger satiated with each listen.</p>
-<body>
+	<body>
+
 </html>
