--- a/r_Obscura.htm
+++ b/r_Obscura.htm
@@ -1,59 +1,100 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8" />
-<title>Tech-Death Perfection</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<meta charset="utf-8" />
+	<title>Tech-Death Perfection</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="main.css">
 
-<style>
-body {
-	background-image: url("obscura.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-}
-
-p {text-align: center;
-color: white;
-font-family: Times New Roman;
-}
-
-h1 {text-align: center;
-color: white;
-font-family: Times New Roman;
-font-size: 50px;
-}
-
-h3 {text-align: center;
-color: white;
-font-family: Times New Roman;
-border: 3px; solid; white;
-border-style: inset;
-background-color: white;
-}
-
-</style>
+	<style>
+		body {
+			background-image: url("images/obscura.jpg");
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+		}
+	</style>
 </head>
 
 <body>
-<a href="reviews.htm">
-<img src="r_metalafterdark.png" alt="Reviews"
-style=width:100%;>
-</a>
-
-<h1><i>Tech-Death Perfection - 96%</i></h1>
-<h3><b><a href="https://open.spotify.com/album/0i7ZHuCCPBo6CfV54I7IxO?si=56da56971041458b">Obscura - A Valediction</b></a></h3>
-<p>I have eagerly been anticipating ‘A Valediction’ since it was first announced by the ever-complex tech-death masters, Obscura. I was interested to see how the album would compare to their previous works, as the album cover and title seemed to break the pattern of a massive orbital sphere in space with a complex noun that no one properly understands that I recognize as the trademark of Obscura. Yes I know there's still some sphere on this album cover. Whatever, it's not a giant exploding planet. But ok, let’s see how the music itself compares. </p>
-<p>Two minutes into the awesome opening track, ‘Forsaken’ and it’s clear: This is Obscura. The seven-minute track feels far shorter than it is because of the sheer complexity and mood changes. It was a fantastic track to use to introduce the album. It establishes the perfect mysterious, cosmic, yet furious atmosphere that maintains the Obscura standard with some new twists throughout. Most notably, the band seem to take a thrash-oriented approach to the verses of some tracks throwing in some intense speed into the mix of melody and complexity created by the harmonious guitars and of course the iconic fretless bass. I enjoyed these thrashy parts of the album as they were balanced out and weren’t too excessive. However, at some points, it did almost feel like the band didn’t quite know what to do, at which point they would launch into another solo. This of course never broke the pace of a song but sometimes felt boring and I just wanted to get into the catchy riffs evident in every chorus.</p>
-<p>The riffs of course were the standard level of complexion you could expect from tech-death but would certainly get any fan (or non-fan!) headbanging. They maintained a solid rhythm while dancing around the fretboard creating some sublime groovy technicality. The work of the guitars is impressive, one guitar launching into solos of pure, seemingly effortless bliss. On every track, there is at least one guitar solo that all dance up and down the fretboard with stellar sweep picking across multiple scales. At some points, the guitars seem to sync up together mid-solo which creates a beautiful fiery harmony, going to the height of technicality. ‘Orbital Elements II’, the sole instrumental track of the album boasts in these areas. I usually don’t enjoy instrumentals as much, but this track takes the mind on a journey through its ups and downs of intense solos, the drum solo toward the end of the track, and the fretless bass with a mind of its own.</p>
-<p>Of course, I couldn’t make it this far without mentioning the iconic fretless bass. It is to Obscura what the saxophone is to Rivers Of Nihil. In saying that, the saxophone does seem to become a gimmick on RoN’s latest album in contrast to the fretless bass here which is given the perfect amount of audio time. At times it’s undeniably present, completely owning the rhythm section which is an innovative symbol of Obscura. The band know when to hold off from needless fretless bass which is a true testament to their songwriting ability. Again it is prominent through the latter half of the album, particularly on ‘Orbital Elements II’.
-</p>
-<p>The drum work on this album is phenomenal and I applaud the effort put into it. The double kicks effortlessly pound at quickly-altered speeds in a manner likewise to the guitar solos. Around-the-kit fills are on point and create excitement in listening. The ride is used artistically, utilizing off-beats and triplets. The rest of the cymbals sound fluently crips on the recording. The drum kit by and large builds a solid foundation for this band to rest its almighty songwriting atop.</p>
-<p>The vocals almost go unnoticed beneath the carefully constructed layers of the album but of course, serve their job dutifully. The snarling style fits like a jigsaw into the rest of the lineup. Due to the style, there is not much variety across an individual song which I would have wanted to hear a lot more but in all honesty, the band has already delivered and exceeded expectations so I can look pretty easily past it. 
-</p>
-<p>The song that takes a twist from the rest of the album is ‘Devoured Usurper’. It sees the vocals (and pretty much everything else) taken down low and slow. The usual snarls are swapped out for menacing growls with the catchiest chorus on the entire album. “I overcome distress and/I can confess/I defeat emptiness/and refuse despair, in misery I swear”. The whole song is almost a breakdown in and of itself and is by a long shot my top track of the album.
-</p>
-<p>‘A Valediction’ sees itself in new territory for Obscura while maintaining the iconic tech-death sound they’ve established since the release of ‘Retribution’. The sweeping solos create beautiful melodies between verses, fuelled by the jazz-like drumming marvel. A truly unique album that opens a doorway to the cosmos through its elegant songwriting that I have and will continue to return to time and time again.
-</p>
+	<a href="reviews.htm">
+		<img src="images/r_metalafterdark.png" alt="Reviews" class="logo">
+	</a>
+	<div class="container-width">
+		<h1 class="review-headline"><i>Tech-Death Perfection - 96%</i></h1>
+		<h3 class="review-album-link"><a
+				href="https://open.spotify.com/album/0i7ZHuCCPBo6CfV54I7IxO?si=56da56971041458b">Obscura - A
+				Valediction</a></h3>
+		<p class="text-base">I have eagerly been anticipating ‘A Valediction’ since it was first announced by the
+			ever-complex tech-death
+			masters, Obscura. I was interested to see how the album would compare to their previous works, as the album cover
+			and title seemed to break the pattern of a massive orbital sphere in space with a complex noun that no one
+			properly
+			understands that I recognize as the trademark of Obscura. Yes I know there's still some sphere on this album
+			cover.
+			Whatever, it's not a giant exploding planet. But ok, let’s see how the music itself compares. </p>
+		<p class="text-base">Two minutes into the awesome opening track, ‘Forsaken’ and it’s clear: This is Obscura. The
+			seven-minute track
+			feels far shorter than it is because of the sheer complexity and mood changes. It was a fantastic track to use to
+			introduce the album. It establishes the perfect mysterious, cosmic, yet furious atmosphere that maintains the
+			Obscura standard with some new twists throughout. Most notably, the band seem to take a thrash-oriented approach
+			to
+			the verses of some tracks throwing in some intense speed into the mix of melody and complexity created by the
+			harmonious guitars and of course the iconic fretless bass. I enjoyed these thrashy parts of the album as they were
+			balanced out and weren’t too excessive. However, at some points, it did almost feel like the band didn’t quite
+			know
+			what to do, at which point they would launch into another solo. This of course never broke the pace of a song but
+			sometimes felt boring and I just wanted to get into the catchy riffs evident in every chorus.</p>
+		<p class="text-base">The riffs of course were the standard level of complexion you could expect from tech-death but
+			would certainly
+			get
+			any fan (or non-fan!) headbanging. They maintained a solid rhythm while dancing around the fretboard creating some
+			sublime groovy technicality. The work of the guitars is impressive, one guitar launching into solos of pure,
+			seemingly effortless bliss. On every track, there is at least one guitar solo that all dance up and down the
+			fretboard with stellar sweep picking across multiple scales. At some points, the guitars seem to sync up together
+			mid-solo which creates a beautiful fiery harmony, going to the height of technicality. ‘Orbital Elements II’, the
+			sole instrumental track of the album boasts in these areas. I usually don’t enjoy instrumentals as much, but this
+			track takes the mind on a journey through its ups and downs of intense solos, the drum solo toward the end of the
+			track, and the fretless bass with a mind of its own.</p>
+		<p class="text-base">Of course, I couldn’t make it this far without mentioning the iconic fretless bass. It is to
+			Obscura what the
+			saxophone is to Rivers Of Nihil. In saying that, the saxophone does seem to become a gimmick on RoN’s latest album
+			in contrast to the fretless bass here which is given the perfect amount of audio time. At times it’s undeniably
+			present, completely owning the rhythm section which is an innovative symbol of Obscura. The band know when to hold
+			off from needless fretless bass which is a true testament to their songwriting ability. Again it is prominent
+			through the latter half of the album, particularly on ‘Orbital Elements II’.
+		</p>
+		<p class="text-base">The drum work on this album is phenomenal and I applaud the effort put into it. The double
+			kicks effortlessly
+			pound
+			at quickly-altered speeds in a manner likewise to the guitar solos. Around-the-kit fills are on point and create
+			excitement in listening. The ride is used artistically, utilizing off-beats and triplets. The rest of the cymbals
+			sound fluently crips on the recording. The drum kit by and large builds a solid foundation for this band to rest
+			its
+			almighty songwriting atop.</p>
+		<p class="text-base">The vocals almost go unnoticed beneath the carefully constructed layers of the album but of
+			course, serve their
+			job
+			dutifully. The snarling style fits like a jigsaw into the rest of the lineup. Due to the style, there is not much
+			variety across an individual song which I would have wanted to hear a lot more but in all honesty, the band has
+			already delivered and exceeded expectations so I can look pretty easily past it.
+		</p>
+		<p class="text-base">The song that takes a twist from the rest of the album is ‘Devoured Usurper’. It sees the
+			vocals (and pretty much
+			everything else) taken down low and slow. The usual snarls are swapped out for menacing growls with the catchiest
+			chorus on the entire album. “I overcome distress and/I can confess/I defeat emptiness/and refuse despair, in
+			misery
+			I swear”. The whole song is almost a breakdown in and of itself and is by a long shot my top track of the album.
+		</p>
+		<p class="text-base">‘A Valediction’ sees itself in new territory for Obscura while maintaining the iconic
+			tech-death sound they’ve
+			established since the release of ‘Retribution’. The sweeping solos create beautiful melodies between verses,
+			fuelled
+			by the jazz-like drumming marvel. A truly unique album that opens a doorway to the cosmos through its elegant
+			songwriting that I have and will continue to return to time and time again.
+		</p>
+	</div>
 </body>
+
 </html>
