Fixing the title sizing and max width

--- a/contact.htm
+++ b/contact.htm
@@ -8,11 +8,10 @@
 </head>
 
 <body>
-
-	<a href="index.html">
-		<img src="images/metalafterdark_final.jpg" alt="Metal After Dark logo" class="logo">
-	</a>
 	<div class="container-width">
+		<a href="index.html">
+			<img src="images/metalafterdark_final.jpg" alt="Metal After Dark logo" class="logo">
+		</a>
 		<img src="images/r_contact.png" alt="contact" class="logo">
 
 		<p class="text-base">
@@ -32,8 +31,7 @@
 			-Tobias
 		</p>
 
-		<a
-			href="mailto:setyouremail@here.com">
+		<a href="mailto:setyouremail@here.com">
 			<img src="images/email.jpg" alt="email" class="email-img">
 		</a>
 	</div>
